<resources>
    <string name="app_name">WhatToon</string>
    <string name="WhatToon_Logo">WhatToon_logo</string>
    <string name="WTD">WHATTOONDEVELOPERS</string>
    <string name="Email">Email</string>
    <string name="PW">Password</string>
    <string name="Name">닉네임</string>
    <string name="Login_Btn">로그인</string>
    <string name="Join_Btn">회원가입</string>
    <string name="JoinPage"><b>회원가입</b></string>
    <string name="Check_Btn">중복확인</string>
    <string name="GenderM">남</string>
    <string name="GenderF">여</string>
    <string name="error_weak_password">6자리 이상 입력해주세요</string>
    <string name="error_invalid_email">유효하지 않은 이메일 입니다.</string>
    <string name="error_user_exists">이미 존재하는 이메일입니다.</string>
    <string name="back">&#160;&#160;&lt;&#160;&#160;이전</string>

</resources>
