<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    tools:context=".JoinActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/JoinPage"
        android:textSize="40sp"/>

    <!-- ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ID"/>

        <Button
            android:id="@+id/IdCheckBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Check_Btn" />

    </LinearLayout>

    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Name" />

        <Button
            android:id="@+id/NameCheckBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Check_Btn" />

    </LinearLayout>

    <!--PW-->
    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="비밀번호"
        android:inputType="textPassword" />

    <!--성별-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <!--남자-->
            <RadioButton
                android:id="@+id/radioGenderM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/GenderM"/>
            <!--여자-->
            <RadioButton
                android:id="@+id/radioGenderF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/GenderF"/>

        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="0.8">
    </LinearLayout>
</LinearLayout>